# regex-utils

./: LICENSE  README.md  pyproject.toml  regex.py  requirements.txt
src/regex_utils/: nfa.py  regex.py
src/regex_utils/dfa/: __init__.py  dfa.py  state.py  transition.py
src/regex_utils/nfa/: nfa.py  utils.py
src/regex_utils/utils/: __init__.py  utils.py
tests/: test_to_regex.py  test_word_boundaries.py
