[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regex-utils"
version = "0.1.0"
authors = [
  { name="Andrea Valenza", email="avalenza89@gmail.com" },
]
description = "Utilities for Regular Expressions in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/avalz/regex-utils"
Issues = "https://github.com/avalz/regex-utils/issues"
